fix part_8